Version 1.4 - 2015-05-29
* Manage non periodic premiums - premiums without dates
* add display premium button in contract form

Version 1.3 - 2015-01-22
* Manage fee overloading
* Module Creation