@@ -1,3 +1,5 @@
+* Restrict default fee permissions to read only
+
 Version 1.4 - 2015-05-29
 * Manage non periodic premiums - premiums without dates
 * add display premium button in contract form
